--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,26 @@
   color: white;
   text-align: center;
   background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .App-header {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 3vmin);
 }
 
+.project-container{
+  display: flex;
+}
+.project{
+  width:23vw;
+  margin: 2%;
+}
+
+.section{
+  height: 80vh;
+}
+
+background-color: aliceblue;
