--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   color: white;
   text-align: center;
-  background-color: #282c34;
+  background-color: #72a39b;
   font-size: 3vmin;
 }
 
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 97vh;
   font-size: calc(10px + 3vmin);
 }
 
@@ -28,7 +28,7 @@
 }
 
 .section{
-  height: 80vh;
+  height: 90vh;
   padding-top: 5%;
 }
 .about-section{
